<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preferences_title">

    <!-- Modo oscuro -->
    <SwitchPreferenceCompat
        android:key="pref_dark_mode"
        android:title="@string/dark_mode"
        android:summary="@string/dark_mode_summary"
        android:defaultValue="false" />

    <!-- Selector de tema -->
    <ListPreference
        android:key="theme"
        android:title="@string/theme"
        android:summary="@string/select_theme"
        android:dialogTitle="@string/choose_theme"
        android:entries="@array/theme_options"
        android:entryValues="@array/theme_values"
        android:defaultValue="light" />

    <!-- Selector de idioma -->
    <ListPreference
        android:key="pref_language"
        android:title="@string/language"
        android:summary="@string/select_language"
        android:entries="@array/language_options"
        android:entryValues="@array/language_values"
        android:defaultValue="default"
        android:dialogTitle="@string/select_language" />


    <ListPreference
        android:key="pref_sort_order"
        android:title="@string/sort_order"
        android:summary="@string/sort_order_summary"
        android:dialogTitle="@string/sort_order"
        android:entries="@array/sort_options"
        android:entryValues="@array/sort_values"
        android:defaultValue="date" />


</PreferenceScreen>
